@@ -1,4 +1,5 @@
 BASE_DIR             = $(top_srcdir)
+INCLUDE_DIR          = $(top_srcdir)/include
 SRC_DIR              = $(BASE_DIR)/src
 COMMON_DIR           = $(SRC_DIR)/common
 TRACER_DIR           = $(SRC_DIR)/tracer
