@@ -118,15 +118,16 @@ static int Set_Overflow_Event (event_t * current,
  **      Function name : ResetCounters
  **      Description :
  ******************************************************************************/
-static void ResetCounters (int ptask, int task)
+static void ResetCounters (unsigned ptask, unsigned task, unsigned thread)
 {
-	int thread, cnt;
+	unsigned cnt;
+	struct thread_t *Sthread = GET_THREAD_INFO(ptask, task, thread);
+	struct task_t *Stask = GET_TASK_INFO(ptask, task);
 
-	obj_table[ptask].tasks[task].tracing_disabled = FALSE;
+	Stask->tracing_disabled = FALSE;
 
-	for (thread = 0; thread < obj_table[ptask].tasks[task].nthreads; thread++)
-		for (cnt = 0; cnt < MAX_HWC; cnt++)
-			obj_table[ptask].tasks[task].threads[thread].counters[cnt] = 0LL;
+	for (cnt = 0; cnt < MAX_HWC; cnt++)
+		Sthread->counters[cnt] = 0;
 }
 #endif
 
@@ -145,7 +146,7 @@ static int Evt_SetCounters ( event_t * current_event, unsigned long long current
 	unsigned int newSet = Get_EvValue(current_event);
 
 	Dimemas_CPU_Burst (fset->output_file, task-1, thread-1, 0);
-	ResetCounters (ptask-1, task-1);
+	ResetCounters (ptask, task, thread);
 	HardwareCounters_Change (ptask, task, thread, newSet, hwctype, hwcvalue);
 
 	for (i = 0; i < MAX_HWC+1; i++)
