@@ -235,6 +235,29 @@ static int Critical_Event (
 	return 0;
 }
 
+static int SetGetNumThreads_Event (
+   event_t * current_event,
+   unsigned long long current_time,
+   unsigned int cpu,
+   unsigned int ptask, 
+   unsigned int task,
+   unsigned int thread,
+   FileSet_t *fset )
+{
+	unsigned int EvType, EvValue;
+	UNREFERENCED_PARAMETER(fset);
+
+	EvType  = Get_EvEvent (current_event);
+	EvValue = Get_EvValue (current_event);
+
+	Switch_State (STATE_OVHD, (EvValue != EVT_END), ptask, task, thread);
+
+	trace_paraver_state (cpu, ptask, task, thread, current_time);
+	trace_paraver_event (cpu, ptask, task, thread, current_time, EvType, EvValue);
+
+	return 0;
+}
+
 SingleEv_Handler_t PRV_OMP_Event_Handlers[] = {
 	{ WSH_EV, WorkSharing_Event },
 	{ PAR_EV, Parallel_Event },
@@ -244,6 +267,8 @@ SingleEv_Handler_t PRV_OMP_Event_Handlers[] = {
 	{ NAMEDCRIT_EV, Critical_Event },
 	{ WORK_EV, Work_Event},
 	{ JOIN_EV, Join_Event},
+	{ OMPSETNUMTHREADS_EV, SetGetNumThreads_Event },
+	{ OMPGETNUMTHREADS_EV, SetGetNumThreads_Event },
 	{ NULL_EV, NULL }
 };
 
