@@ -2,6 +2,9 @@
 ChangeLog
  [ + added, - removed, * changed ]
 
+ * 13Oct2011 Several OpenMP bugfixes. Added instrumentation for set/get num
+             threads. Fixed hwc counts at openmp when counter set changes.
+             Fixed timing routines when using multiple threads.
  * 08Sep2011 Several OpenMP bugfixes
  * 26Aug2011 Modified code to support virtual_thread (from nanos) to view
              nanos tasks as threads in paraver.
